# threat-db

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  local-db-bootstrap.sh  pyproject.toml  queries-graphql.md  queries.md  skaffold.yaml  threatdb-schema.graphql
.github/workflows/: pythonpublish.yml  release.yml
contrib/helm/: README.md
contrib/helm/threat-db/: Chart.yaml  values.yaml
contrib/helm/threat-db/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
contrib/helm/threat-db/templates/tests/: test-connection.yaml
contrib/microk8s/: INSTALL.md
tests/: test_loader.py
tests/data/: sbom-universal.vex.json
tests/data/NodeGoat/: sbom-nodejs.vex.json  sbom-yaml-manifest.vex.json
threat_db/: admincli.py  api.py  base-schema.graphql  cli.py  client.py  config.py  graphclient.py  loader.py  logger.py  queries.py  schema.py  utils.py
